Remove: Threads and Reactions features (demo reset)
Restored system to extensibility-ready baseline for demo.
Removed 6 files, restored 8 modified files. Version 1.0.0.
46 unit tests pass, 18/18 E2E pass.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>