@@ -1,6 +1,5 @@
 package com.slackmsg.message.service;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.slackmsg.domain.entity.Message;
 import com.slackmsg.domain.enums.MessageType;
 import com.slackmsg.dto.request.SendMessageRequest;
@@ -17,7 +16,10 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.Instant;
-import java.util.*;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.*;
@@ -26,12 +28,20 @@ import static org.mockito.Mockito.*;
 @ExtendWith(MockitoExtension.class)
 class MessageServiceTest {
 
-    @Mock private MessageStore messageStore;
-    @Mock private ChannelServicePort channelService;
-    @Mock private IdempotencyService idempotencyService;
-    @Mock private FanoutService fanoutService;
-    @Mock private ObjectMapper objectMapper;
-    @InjectMocks private MessageService messageService;
+    @Mock
+    private MessageStore messageStore;
+
+    @Mock
+    private ChannelServicePort channelService;
+
+    @Mock
+    private IdempotencyService idempotencyService;
+
+    @Mock
+    private FanoutService fanoutService;
+
+    @InjectMocks
+    private MessageService messageService;
 
     private final UUID tenantId = UUID.randomUUID();
     private final UUID userId = UUID.randomUUID();
@@ -45,112 +55,159 @@ class MessageServiceTest {
     }
 
     @AfterEach
-    void tearDown() { TenantContext.clear(); }
-
-    private Message msg(UUID id, UUID parentId) {
-        return Message.builder().id(id).tenantId(tenantId).channelId(channelId).senderId(userId)
-                .senderName("Test User").content("Hello").messageType(MessageType.TEXT)
-                .parentMessageId(parentId).createdAt(Instant.now()).build();
+    void tearDown() {
+        TenantContext.clear();
     }
 
     @Test
     void sendMessage_success() {
-        SendMessageRequest req = new SendMessageRequest(); req.setContent("Hello"); req.setIdempotencyKey("k1");
-        UUID mid = UUID.randomUUID();
+        SendMessageRequest req = new SendMessageRequest();
+        req.setContent("Hello world");
+        req.setIdempotencyKey("key-1");
+
+        UUID messageId = UUID.randomUUID();
+        Message savedMessage = Message.builder()
+                .id(messageId)
+                .tenantId(tenantId)
+                .channelId(channelId)
+                .senderId(userId)
+                .senderName("Test User")
+                .content("Hello world")
+                .messageType(MessageType.TEXT)
+                .createdAt(Instant.now())
+                .idempotencyKey("key-1")
+                .build();
+
         when(channelService.isMember(channelId, userId)).thenReturn(true);
-        when(idempotencyService.checkDuplicate(tenantId, userId, "k1")).thenReturn(Optional.empty());
-        when(messageStore.save(any())).thenReturn(msg(mid, null));
-        MessageResponse r = messageService.sendMessage(channelId, req);
-        assertEquals(mid, r.getId());
-        verify(fanoutService).fanout(eq(tenantId), eq(channelId), any(), eq(userId), eq("Test User"));
+        when(idempotencyService.checkDuplicate(tenantId, userId, "key-1")).thenReturn(Optional.empty());
+        when(messageStore.save(any(Message.class))).thenReturn(savedMessage);
+
+        MessageResponse response = messageService.sendMessage(channelId, req);
+
+        assertNotNull(response);
+        assertEquals(messageId, response.getId());
+        assertEquals(channelId, response.getChannelId());
+        assertEquals(userId, response.getSenderId());
+        assertEquals("Hello world", response.getContent());
+
+        verify(messageStore).save(any(Message.class));
+        verify(idempotencyService).markCompleted(tenantId, userId, "key-1", messageId.toString());
+        verify(fanoutService).fanout(eq(tenantId), eq(channelId), any(Message.class), eq(userId), eq("Test User"));
     }
 
     @Test
     void sendMessage_notMember() {
-        SendMessageRequest req = new SendMessageRequest(); req.setContent("Hi");
+        SendMessageRequest req = new SendMessageRequest();
+        req.setContent("Hello");
+
         when(channelService.isMember(channelId, userId)).thenReturn(false);
-        assertThrows(SecurityException.class, () -> messageService.sendMessage(channelId, req));
-    }
 
-    @Test
-    void sendMessage_noContent() {
-        when(channelService.isMember(channelId, userId)).thenReturn(true);
-        assertThrows(IllegalArgumentException.class, () -> messageService.sendMessage(channelId, new SendMessageRequest()));
-    }
+        assertThrows(SecurityException.class,
+                () -> messageService.sendMessage(channelId, req));
 
-    @Test
-    void sendMessage_idempotent() {
-        SendMessageRequest req = new SendMessageRequest(); req.setContent("Hi"); req.setIdempotencyKey("dup");
-        UUID eid = UUID.randomUUID();
-        when(channelService.isMember(channelId, userId)).thenReturn(true);
-        when(idempotencyService.checkDuplicate(tenantId, userId, "dup")).thenReturn(Optional.of(eid.toString()));
-        when(messageStore.findById(tenantId, eid)).thenReturn(Optional.of(msg(eid, null)));
-        assertEquals(eid, messageService.sendMessage(channelId, req).getId());
         verify(messageStore, never()).save(any());
     }
 
     @Test
-    void sendMessage_fanoutFailure_stillSucceeds() {
-        SendMessageRequest req = new SendMessageRequest(); req.setContent("Hi"); req.setIdempotencyKey("k2");
-        UUID mid = UUID.randomUUID();
+    void sendMessage_noContent() {
+        SendMessageRequest req = new SendMessageRequest();
+        // No content, no media
+
         when(channelService.isMember(channelId, userId)).thenReturn(true);
-        when(idempotencyService.checkDuplicate(tenantId, userId, "k2")).thenReturn(Optional.empty());
-        when(messageStore.save(any())).thenReturn(msg(mid, null));
-        doThrow(new RuntimeException("Redis down")).when(fanoutService).fanout(any(), any(), any(), any(), any());
-        assertNotNull(messageService.sendMessage(channelId, req));
+
+        assertThrows(IllegalArgumentException.class,
+                () -> messageService.sendMessage(channelId, req));
+
+        verify(messageStore, never()).save(any());
     }
 
     @Test
-    void getHistory_clampsLimit() {
+    void sendMessage_idempotent() {
+        SendMessageRequest req = new SendMessageRequest();
+        req.setContent("Hello");
+        req.setIdempotencyKey("dup-key");
+
+        UUID existingMsgId = UUID.randomUUID();
+        Message existingMessage = Message.builder()
+                .id(existingMsgId)
+                .tenantId(tenantId)
+                .channelId(channelId)
+                .senderId(userId)
+                .senderName("Test User")
+                .content("Hello")
+                .messageType(MessageType.TEXT)
+                .createdAt(Instant.now())
+                .build();
+
+        when(channelService.isMember(channelId, userId)).thenReturn(true);
+        when(idempotencyService.checkDuplicate(tenantId, userId, "dup-key"))
+                .thenReturn(Optional.of(existingMsgId.toString()));
+        when(messageStore.findById(tenantId, existingMsgId)).thenReturn(Optional.of(existingMessage));
+
+        MessageResponse response = messageService.sendMessage(channelId, req);
+
+        assertNotNull(response);
+        assertEquals(existingMsgId, response.getId());
+        verify(messageStore, never()).save(any());
+        verify(fanoutService, never()).fanout(any(), any(), any(), any(), any());
+    }
+
+    @Test
+    void sendMessage_fanoutFailure() {
+        SendMessageRequest req = new SendMessageRequest();
+        req.setContent("Hello");
+        req.setIdempotencyKey("key-2");
+
+        UUID messageId = UUID.randomUUID();
+        Message savedMessage = Message.builder()
+                .id(messageId)
+                .tenantId(tenantId)
+                .channelId(channelId)
+                .senderId(userId)
+                .senderName("Test User")
+                .content("Hello")
+                .messageType(MessageType.TEXT)
+                .createdAt(Instant.now())
+                .build();
+
+        when(channelService.isMember(channelId, userId)).thenReturn(true);
+        when(idempotencyService.checkDuplicate(tenantId, userId, "key-2")).thenReturn(Optional.empty());
+        when(messageStore.save(any(Message.class))).thenReturn(savedMessage);
+        doThrow(new RuntimeException("Redis down")).when(fanoutService)
+                .fanout(any(), any(), any(), any(), any());
+
+        // Should NOT throw despite fanout failure (best-effort)
+        MessageResponse response = messageService.sendMessage(channelId, req);
+
+        assertNotNull(response);
+        assertEquals(messageId, response.getId());
+        verify(messageStore).save(any(Message.class));
+    }
+
+    @Test
+    void getHistory_success() {
         Instant cursor = Instant.now();
+        Message msg = Message.builder()
+                .id(UUID.randomUUID())
+                .tenantId(tenantId)
+                .channelId(channelId)
+                .senderId(userId)
+                .senderName("Test User")
+                .content("Hello")
+                .messageType(MessageType.TEXT)
+                .createdAt(Instant.now())
+                .build();
+
         when(channelService.isMember(channelId, userId)).thenReturn(true);
         when(messageStore.getHistory(eq(tenantId), eq(channelId), eq(cursor), anyInt()))
-                .thenReturn(List.of(msg(UUID.randomUUID(), null)));
-        messageService.getHistory(channelId, cursor, 200);
+                .thenReturn(Collections.singletonList(msg));
+
+        List<MessageResponse> history = messageService.getHistory(channelId, cursor, 200);
+
+        assertNotNull(history);
+        assertEquals(1, history.size());
+
+        // Verify limit was clamped to 100 (max)
         verify(messageStore).getHistory(tenantId, channelId, cursor, 100);
-    }
-
-    @Test
-    void sendThreadReply_success() {
-        UUID parentId = UUID.randomUUID();
-        SendMessageRequest req = new SendMessageRequest(); req.setContent("Reply"); req.setParentMessageId(parentId);
-        UUID replyId = UUID.randomUUID();
-        when(channelService.isMember(channelId, userId)).thenReturn(true);
-        when(idempotencyService.checkDuplicate(any(), any(), any())).thenReturn(Optional.empty());
-        when(messageStore.findById(tenantId, parentId)).thenReturn(Optional.of(msg(parentId, null)));
-        when(messageStore.save(any())).thenReturn(msg(replyId, parentId));
-        MessageResponse r = messageService.sendMessage(channelId, req);
-        assertEquals(parentId, r.getParentMessageId());
-        verify(messageStore).incrementReplyCount(parentId);
-        verify(fanoutService).fanoutEvent(eq(tenantId), eq(channelId), any(), eq(userId), eq(false));
-    }
-
-    @Test
-    void sendThreadReply_parentNotFound() {
-        UUID parentId = UUID.randomUUID();
-        SendMessageRequest req = new SendMessageRequest(); req.setContent("Reply"); req.setParentMessageId(parentId);
-        when(channelService.isMember(channelId, userId)).thenReturn(true);
-        when(messageStore.findById(tenantId, parentId)).thenReturn(Optional.empty());
-        assertThrows(IllegalArgumentException.class, () -> messageService.sendMessage(channelId, req));
-    }
-
-    @Test
-    void sendThreadReply_replyToReplyBlocked() {
-        UUID gpId = UUID.randomUUID(), parentId = UUID.randomUUID();
-        SendMessageRequest req = new SendMessageRequest(); req.setContent("Nested"); req.setParentMessageId(parentId);
-        when(channelService.isMember(channelId, userId)).thenReturn(true);
-        when(messageStore.findById(tenantId, parentId)).thenReturn(Optional.of(msg(parentId, gpId)));
-        assertThrows(IllegalArgumentException.class, () -> messageService.sendMessage(channelId, req));
-    }
-
-    @Test
-    void getThreadReplies_success() {
-        UUID parentId = UUID.randomUUID();
-        when(channelService.isMember(channelId, userId)).thenReturn(true);
-        when(messageStore.findById(tenantId, parentId)).thenReturn(Optional.of(msg(parentId, null)));
-        when(messageStore.getThreadReplies(eq(tenantId), eq(channelId), eq(parentId), isNull(), anyInt()))
-                .thenReturn(List.of(msg(UUID.randomUUID(), parentId)));
-        List<MessageResponse> result = messageService.getThreadReplies(channelId, parentId, null, 50);
-        assertEquals(2, result.size()); // parent + reply
     }
 }
